[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "samp-fm"
version = "0.1.0"
description = "Reference implementation of the SAMP-FM architecture and statistical framework (not a validated result set)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
    "scikit-learn",
    "lifelines",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["samp_fm*"]
