[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comp-oncology-tools"
version = "0.1.0"
description = "Reference implementation of the SAMP-FM architecture"
dependencies = ["scipy", "numpy", "torch>=2.0"]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["comp_oncology_tools*"]